tests/ui/expressions/operator-expressions/bitwise-expressions/bitwise-expressions-types-2.stderr
error[E0369]: no implementation for `f32 | f32`
  --> $DIR/bitwise-expressions-types-2.rs:8:20
   |
LL |     let g_or_h = g | h; 
   |                  - ^ - f32
   |                  |
   |                  f32

error[E0369]: no implementation for `f32 & f32`
  --> $DIR/bitwise-expressions-types-2.rs:10:21
   |
LL |     let g_and_h = g & h;
   |                   - ^ - f32
   |                   |
   |                   f32

error[E0369]: no implementation for `f32 ^ f32`
  --> $DIR/bitwise-expressions-types-2.rs:12:21
   |
LL |     let g_xor_h = g ^ h;
   |                   - ^ - f32
   |                   |
   |                   f32

error[E0600]: cannot apply unary operator `!` to type `f32`
  --> $DIR/bitwise-expressions-types-2.rs:14:17
   |
LL |     let not_h = !h;
   |                 ^^ cannot apply unary operator `!`

error[E0369]: no implementation for `f32 << f32`
  --> $DIR/bitwise-expressions-types-2.rs:16:21
   |
LL |     let g_shift = g << h; 
   |                   - ^^ - f32
   |                   |
   |                   f32

error[E0369]: no implementation for `f32 >> f32`
  --> $DIR/bitwise-expressions-types-2.rs:18:21
   |
LL |     let h_shift = g >> h; 
   |                   - ^^ - f32
   |                   |
   |                   f32

error[E0369]: no implementation for `char | char`
  --> $DIR/bitwise-expressions-types-2.rs:25:20
   |
LL |     let i_or_j = i | j;
   |                  - ^ - char
   |                  |
   |                  char

error[E0369]: no implementation for `char & char`
  --> $DIR/bitwise-expressions-types-2.rs:27:21
   |
LL |     let i_and_j = i & j;
   |                   - ^ - char
   |                   |
   |                   char

error[E0369]: no implementation for `char ^ char`
  --> $DIR/bitwise-expressions-types-2.rs:29:21
   |
LL |     let i_xor_j = i ^ j;
   |                   - ^ - char
   |                   |
   |                   char

error[E0600]: cannot apply unary operator `!` to type `char`
  --> $DIR/bitwise-expressions-types-2.rs:31:17
   |
LL |     let not_j = !j;
   |                 ^^ cannot apply unary operator `!`

error[E0369]: no implementation for `char << char`
  --> $DIR/bitwise-expressions-types-2.rs:33:21
   |
LL |     let i_shift = i << j; 
   |                   - ^^ - char
   |                   |
   |                   char

error[E0369]: no implementation for `char >> char`
  --> $DIR/bitwise-expressions-types-2.rs:35:21
   |
LL |     let j_shift = i >> j; 
   |                   - ^^ - char
   |                   |
   |                   char

error[E0369]: no implementation for `String | String`
  --> $DIR/bitwise-expressions-types-2.rs:43:20
   |
LL |     let k_or_l = k | l;
   |                  - ^ - String
   |                  |
   |                  String

error[E0369]: no implementation for `String & String`
  --> $DIR/bitwise-expressions-types-2.rs:45:21
   |
LL |     let k_and_l = k & l;
   |                   - ^ - String
   |                   |
   |                   String

error[E0369]: no implementation for `String ^ String`
  --> $DIR/bitwise-expressions-types-2.rs:47:21
   |
LL |     let k_xor_l = k ^ l;
   |                   - ^ - String
   |                   |
   |                   String

error[E0600]: cannot apply unary operator `!` to type `String`
  --> $DIR/bitwise-expressions-types-2.rs:49:17
   |
LL |     let not_l = !l;   
   |                 ^^ cannot apply unary operator `!`

error[E0369]: no implementation for `String << String`
  --> $DIR/bitwise-expressions-types-2.rs:51:21
   |
LL |     let k_shift = k << l; 
   |                   - ^^ - String
   |                   |
   |                   String

error[E0369]: no implementation for `String >> String`
  --> $DIR/bitwise-expressions-types-2.rs:53:21
   |
LL |     let l_shift = k >> l; 
   |                   - ^^ - String
   |                   |
   |                   String

error[E0277]: no implementation for `i8 | bool`
  --> $DIR/bitwise-expressions-types-2.rs:62:20
   |
LL |     let m_or_n = m | n;
   |                    ^ no implementation for `i8 | bool`
   |
   = help: the trait `BitOr<bool>` is not implemented for `i8`
   = help: the following other types implement trait `BitOr<Rhs>`:
             `&'a i8` implements `BitOr<i8>`
             `&i8` implements `BitOr<&i8>`
             `i8` implements `BitOr<&i8>`
             `i8` implements `BitOr`

error[E0277]: no implementation for `i8 & bool`
  --> $DIR/bitwise-expressions-types-2.rs:64:21
   |
LL |     let m_and_n = m & n;
   |                     ^ no implementation for `i8 & bool`
   |
   = help: the trait `BitAnd<bool>` is not implemented for `i8`
   = help: the following other types implement trait `BitAnd<Rhs>`:
             `&'a i8` implements `BitAnd<i8>`
             `&i8` implements `BitAnd<&i8>`
             `i8` implements `BitAnd<&i8>`
             `i8` implements `BitAnd`

error[E0277]: no implementation for `i8 ^ bool`
  --> $DIR/bitwise-expressions-types-2.rs:66:21
   |
LL |     let m_xor_n = m ^ n;
   |                     ^ no implementation for `i8 ^ bool`
   |
   = help: the trait `BitXor<bool>` is not implemented for `i8`
   = help: the following other types implement trait `BitXor<Rhs>`:
             `&'a i8` implements `BitXor<i8>`
             `&i8` implements `BitXor<&i8>`
             `i8` implements `BitXor<&i8>`
             `i8` implements `BitXor`

error[E0277]: no implementation for `i8 << bool`
  --> $DIR/bitwise-expressions-types-2.rs:68:21
   |
LL |     let m_shift = m << n; 
   |                     ^^ no implementation for `i8 << bool`
   |
   = help: the trait `Shl<bool>` is not implemented for `i8`
   = help: the following other types implement trait `Shl<Rhs>`:
             `&'a i8` implements `Shl<i128>`
             `&'a i8` implements `Shl<i16>`
             `&'a i8` implements `Shl<i32>`
             `&'a i8` implements `Shl<i64>`
             `&'a i8` implements `Shl<i8>`
             `&'a i8` implements `Shl<isize>`
             `&'a i8` implements `Shl<u128>`
             `&'a i8` implements `Shl<u16>`
           and 40 others

error[E0277]: no implementation for `i8 >> bool`
  --> $DIR/bitwise-expressions-types-2.rs:70:21
   |
LL |     let n_shift = m >> n; 
   |                     ^^ no implementation for `i8 >> bool`
   |
   = help: the trait `Shr<bool>` is not implemented for `i8`
   = help: the following other types implement trait `Shr<Rhs>`:
             `&'a i8` implements `Shr<i128>`
             `&'a i8` implements `Shr<i16>`
             `&'a i8` implements `Shr<i32>`
             `&'a i8` implements `Shr<i64>`
             `&'a i8` implements `Shr<i8>`
             `&'a i8` implements `Shr<isize>`
             `&'a i8` implements `Shr<u128>`
             `&'a i8` implements `Shr<u16>`
           and 40 others

error: aborting due to 23 previous errors

Some errors have detailed explanations: E0277, E0369, E0600.
For more information about an error, try `rustc --explain E0277`.
